Start of redesign

--- a/app/views/gluttonberg/admin/asset_library/assets/category.html.haml
+++ b/app/views/gluttonberg/admin/asset_library/assets/category.html.haml
@@ -1,7 +1,25 @@
 - @window_title = "Asset Library"
 - params[:category] = params[:category].pluralize if params[:category] != "all" && params[:category] != "uncategorised"
-- @page_title = "#{link_to "Asset Library", admin_library_path} > #{params[:category].titleize}"
+- @page_title = "Asset Library > #{params[:category].titleize}"
 - @page_image = "/assets/sidebar/icon_library.png"
-  
-= render :partial => "/gluttonberg/admin/asset_library/shared/asset_panels" , :locals => { :type => "category" , :name_or_id =>  params[:category] , :sorter_url => admin_asset_category_path(:category => params[:category]) , :previous_page_title => params[:category] }
-.clear
+
+.row-fluid
+  = render :partial => "/gluttonberg/admin/asset_library/shared/sidebar"
+  .span9
+    .row-fluid
+      .page-header
+        %h1
+          = @page_title.html_safe
+      .subnav
+        = sub_nav do
+          %li
+            %a{:href => admin_asset_category_path(:category => 'all' , :page => 1 ), :class => "browseAll"}
+              All
+        
+          - @categories.each do |category|
+            %li
+              - text = ( category.name == "uncategorised" ?  "Uncategorised" : category.name.pluralize.capitalize )
+              %a{:href => admin_asset_category_path(:category => category.name , :page => 1), :class => "browse#{text}"}
+                = text
+
+      = render :partial => "/gluttonberg/admin/asset_library/shared/asset_panels" , :locals => { :type => "category" , :name_or_id =>  params[:category] , :sorter_url => admin_asset_category_path(:category => params[:category]) , :previous_page_title => params[:category] }
