--- a/app/views/gluttonberg/admin/asset_library/collections/new.html.haml
+++ b/app/views/gluttonberg/admin/asset_library/collections/new.html.haml
@@ -1,4 +1,12 @@
 - @window_title = "Library"
-- @page_title = "#{link_to "Asset Library", admin_library_path} > Add new collection"
+- @page_title = "Add new collection"
 - @page_image = "/assets/sidebar/icon_library.png"
-= render :partial => "form" , :locals => { :url_opts =>{ :action => :create } , :method_name => "post" }
+.row-fluid
+  = render :partial => "/gluttonberg/admin/asset_library/shared/sidebar"
+  .span9
+    .row-fluid
+      .page-header
+        %h1
+          = @page_title.html_safe
+
+      = render :partial => "form" , :locals => { :url_opts =>{ :action => :create } , :method_name => "post" }
