--- a/app/views/layouts/bare.html.haml
+++ b/app/views/layouts/bare.html.haml
@@ -1,15 +1,34 @@
-!!! Strict
-%html{:xmlns => "http://www.w3.org/1999/xhtml", "xml:lang" => "en", :lang => "en"}
+!!!
+%html{:lang => "en"}
   %head
-    %title= "- #{@page_title}" if @page_title
-    %meta{"http-equiv" => "Content-Type", :content => "text/html;charset=utf-8" }/
-
-    = javascript_include_tag "jquery-1-4-2-min" , "gb_login"
-
-    = stylesheet_link_tag "admin"
-    = custom_stylesheet_link_tag
+    %meta{:charset => "utf-8"}
+      %title
+        = "#{website_title}- #{@page_title}" if @page_title
+      %meta{:content => "width=device-width, initial-scale=1.0", :name => "viewport"}
+      %meta{:content => "", :name => "description"}
+      %meta{:content => "", :name => "author"}
+      = csrf_meta_tag
+      / Le styles
+      %link{:href => "/assets/bootstrap.css", :rel => "stylesheet"}
+      %link{:href => "/assets/bootstrap-responsive.css", :rel => "stylesheet"}
+      %link{:href => "/assets/admin-override.css", :rel => "stylesheet"}
+      :css
+        body {
+          padding-top: 60px;
+          padding-bottom: 40px;
+        }
+        .sidebar-nav {
+          padding: 9px 0;
+        }
+      /[if lt IE 9]
+        <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+            
+  %body#login
+    .container-fluid
+      = yield
     
-  %body{:id => "#{@page_id}"}
-    
-      
-    = yield
+
+    %script{:src => "/assets/jquery.js"}
+    %script{:src => "/assets/bootstrap.js"}
+    = javascript_include_tag "jgb_login"
+    = custom_javascript_include_tag
